smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-newline.smithy
// Parse error at line 2, column 9 near `\n:`: Expected: ':', but found '\n' | Model
$version
: "2.0"
